<resources>
    <string name="app_name">Магазинччик</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="checkoutSum">Итого</string>
    <string name="checkoutPay">Оплатить</string>
    <string name="checkoutPhone">Телефон</string>
    <string name="checkoutName">Имя</string>
    <string name="checkoutOtchestvo">Отчество</string>
    <string name="checkoutFamily">Фамилия</string>
    <string name="Discount">Скидка</string>
    <string name="priceWithoutSales">Цена без скидки</string>
    <string name="wayOfPay">Способ оплаты</string>
    <string name="personData">Личные данные</string>
    <string name="Consisting">Состав заказа</string>
    <string name="ForExample">Пример, 89999999999</string>
    <string name="PayCard">Картой</string>
    <string name="PayCash">Наличными</string>
    <string name="catalogHeader">Каталог</string>
    <string name="detailsBTn">Подробнее</string>
    <string name="checkoutBtn">Оформить заказ</string>
    <string name="basketHeader">Корзина</string>
</resources>
